--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light shadow-sm">
         <div class="container">
-            <a class="navbar-brand title-icon" href="#"><span class="font-primary">P</span>ortfolio</a>
+            <a class="navbar-brand title-icon" href="https://ayesha-portfolio.herokuapp.com/"><span class="font-primary">P</span>ortfolio</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler">
             <span class="navbar-toggler-icon"></span>
           </button> 
@@ -42,7 +42,7 @@
           <div class="email">ayeshayasmeen22@gmail.com</div> 
           <div class="icons">
             <a href="https://github.com/ayeeshayas"><i class="bi bi-github"></i></a>
-            <a href="#"><i class="bi bi-linkedin ms-3"></i></a> 
+            <a href="https://www.linkedin.com/in/ayesha-yasmeen-a1b5b3196/"><i class="bi bi-linkedin ms-3"></i></a> 
           </div>         
       </div>
       <div class="project" id="project">
